@@ -4,6 +4,7 @@ Objective Caml 3.12.1:
 - Changed default minor heap size from 32k to 256k words.
 
 Bug fixes:
+- PR#4345, PR#4767: problems with camlp4 printing of float values
 - PR#4380: ocamlbuild should not use tput on windows
 - PR#4552: ocamlbuild does not create symlinks when using '.itarget' file
 - PR#4794, PR#4959: call annotations not generated by ocamlopt
